--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-card">
          <div class="image">
-            <img src="profile.png" alt="" class="profile-img">
+            <img src="profile.webp" alt="" class="profile-img">
          </div>
          <div class="text-data">
             <span class="name"> CodingLab</span>
